# Graduation_Project

./: .gitignore  pyproject.toml
backend/armored_train/: manage.py
backend/armored_train/armored_train/: asgi.py  config.yaml  settings.py  urls.py  wsgi.py
backend/armored_train/users/: models.py  serializers.py  views.py
backend/armored_train/users/migrations/: 0001_initial.py
frontend/armored_train/: main.py
frontend/armored_train/game/assets/: asset_manager.py  assets.json  assets.yaml
frontend/armored_train/game/game_objects/enemies/: heavy.py  light.py  medium.py
frontend/armored_train/game/game_objects/wagons/: engineering_wagon.py  locomotive.py  wagon.py
frontend/armored_train/view/: main.py  path_data_manager.py  paths_data.yaml  url_data_manager.py  urls_data.yaml
frontend/armored_train/view/controllers/: authorization_controller.py  controller.py  first_level_controller.py  level_selection_controller.py  main_menu_controller.py  rating_controller.py
frontend/armored_train/view/levels/: first_level.py
frontend/armored_train/view/models/: authorization_model.py  models.py
frontend/armored_train/view/screens/: authorization_screen.py  level_selection_screen.py  main_menu_screen.py  rating_screen.py  screen.py  screen_manager.py
frontend/armored_train/view/widgets/: alpha_rect_widget.py  button_widget.py  button_widgets.py  input_text_widget.py  textbox_widget.py  widget.py  widget_utils.py
